--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "@angular-devkit/build-angular": "^19.2.15",
     "@angular/cli": "^19.2.15",
     "@angular/compiler-cli": "^19.2.0",
+    "@eslint/js": "^9.34.0",
     "@types/jasmine": "~5.1.0",
     "angular-eslint": "20.2.0",
-    "eslint": "^9.33.0",
+    "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.3.0",
     "jasmine-core": "~5.6.0",
+    "jiti": "^2.5.1",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
@@ -41,6 +44,6 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "3.6.2",
     "typescript": "~5.7.2",
-    "typescript-eslint": "8.40.0"
+    "typescript-eslint": "^8.40.0"
   }
 }
