--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "angular-plotly.js": "^6.0.0",
+    "plotly.js-dist-min": "^3.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -30,6 +32,7 @@
     "@angular/compiler-cli": "^19.2.0",
     "@eslint/js": "^9.34.0",
     "@types/jasmine": "~5.1.0",
+    "@types/plotly.js-dist-min": "^2.3.4",
     "angular-eslint": "20.2.0",
     "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
